kubernetes/istio-deployment/ui-deploy-v2.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: weatherapp-ui-v2
  namespace: staging
spec:
  replicas: 1
  selector:
    matchLabels:
      app: weatherapp-ui
      version: v2
  template:
    metadata:
      labels:
        app: weatherapp-ui
        version: v2
        istio: monitor
    spec:
      containers:
        - image: ghazouanihm/weatherapp-ui:2.0
          imagePullPolicy: Always
          name: weatherapp-ui
          ports:
            - name: http
              containerPort: 3000
