kubernetes/istio-deployment/app-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: ui-service
  namespace: staging
spec:
  ports:
    - name: http
      port: 3000
  selector:
    app: weatherapp-ui
