kubernetes/istio-deployment/auth-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-deployment
  namespace: staging
spec:
  replicas: 1
  selector: 
    matchLabels:
      app: auth
  template:
    metadata:
      labels:
        app: auth
    spec:
      containers:
        - name: auth
          image: ghazouanihm/weatherapp-auth:1.0
          imagePullPolicy: Always
          ports:
            - containerPort: 8080

---

apiVersion: v1
kind: Service
metadata:
  name: auth-service
  namespace: staging
spec:
  selector:
    app: auth
  type: ClusterIP
  ports:
  - protocol: "TCP"
    port: 8080
    targetPort: 8080
