kubernetes/istio-deployment/db-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: db-deployment
  namespace: staging
spec:
  replicas: 1
  selector: 
    matchLabels:
      app: db
  template:
    metadata:
      labels:
        app: db
    spec:
      containers:
        - name: db
          image: mysql
          imagePullPolicy: Always
          ports:
            - containerPort: 3306

---

apiVersion: v1
kind: Service
metadata:
  name: db-service
  namespace: staging
spec:
  selector:
    app: db
  type: ClusterIP
  ports:
  - protocol: "TCP"
    port: 3306
    targetPort: 3306
