kubernetes/istio-deployment/weather-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: weather-deployment
  namespace: staging
spec:
  replicas: 1
  selector: 
    matchLabels:
      app: weather
  template:
    metadata:
      labels:
        app: weather
    spec:
      containers:
        - name: weather
          image: ghazouanihm/weatherapp-weather:1.0
          imagePullPolicy: Always
          ports:
            - containerPort: 5000

---

apiVersion: v1
kind: Service
metadata:
  name: weather-service
  namespace: staging
spec:
  selector:
    app: weather
  type: ClusterIP
  ports:
  - protocol: "TCP"
    port: 5000
    targetPort: 5000
